# Log_RCA_Application

./: .gitignore  README.md
MITRA.LOG.RCA/Batch_Processing/: .env.example  Dockerfile  QUICK_START.md  docker-compose.yml  nginx.conf  requirements.txt
MITRA.LOG.RCA/Batch_Processing/api/: main.py
MITRA.LOG.RCA/Batch_Processing/api/src/core/: config.py  logging.py
MITRA.LOG.RCA/Batch_Processing/api/src/db/: database.py
MITRA.LOG.RCA/Batch_Processing/api/src/models/: __init__.py  job.py
MITRA.LOG.RCA/Batch_Processing/api/src/routers/: __init__.py  job_routes.py  routes.py  status_routes.py
MITRA.LOG.RCA/Batch_Processing/api/src/schemas/: __init__.py  job.py
MITRA.LOG.RCA/Batch_Processing/api/src/services/: __init__.py  background_processor.py  job_service.py  spark_service.py
MITRA.LOG.RCA/Batch_Processing/api/src/utils/: __init__.py  db_utils.py  file_utils.py
MITRA.LOG.RCA/Batch_Processing/scripts/: migrate_db.py  start_server.py  test_basic.py  test_system.py
MITRA.LOG.RCA/log_application/: .env  __init__.py  pyproject.toml
MITRA.LOG.RCA/log_application/api/: __init__.py  main.py  poetry.toml  pyproject.toml
MITRA.LOG.RCA/log_application/api/models/: schemas.py
MITRA.LOG.RCA/log_application/api/routers/: __init__.py  log_router.py
MITRA.LOG.RCA/log_application/common/: __init__.py
MITRA.LOG.RCA/log_application/common/enum/: __init__.py  task_types.py
MITRA.LOG.RCA/log_application/config/: __init__.py  common_config.json  config_manager.py  worker_config.json
MITRA.LOG.RCA/log_application/worker/: __init__.py  main.py  pyproject.toml
MITRA.LOG.RCA/log_application/worker/tasks/: __init__.py  log_tasks.py
mitra_ai_foundation/: pyproject.toml
mitra_ai_foundation/mitra_ai_foundation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mitra_ai_foundation/mitra_ai_foundation/api/: __init__.py  app.py  config_helpers.py  main.py  redis_client.py
mitra_ai_foundation/mitra_ai_foundation/api/models/: schemas.py
mitra_ai_foundation/mitra_ai_foundation/api/routers/: task_router.py
mitra_ai_foundation/mitra_ai_foundation/api/services/: redis_service.py  task_service.py
mitra_ai_foundation/mitra_ai_foundation/common/: __init__.py
mitra_ai_foundation/mitra_ai_foundation/worker/: __init__.py  celery_app.py  config_helpers.py  extension.py  main.py  tasks.py
mitra_ai_foundation/src/mitra_ai_foundation/: __init__.py
mitra_ai_foundation/src/mitra_ai_foundation/api/: __init__.py  app.py  config_helpers.py  main.py  pyproject.toml  redis_client.py
mitra_ai_foundation/src/mitra_ai_foundation/api/routers/: task_router.py
mitra_ai_foundation/src/mitra_ai_foundation/api/services/: redis_service.py  task_service.py
mitra_ai_foundation/src/mitra_ai_foundation/common/config/: __init__.py  config_manager.py
mitra_ai_foundation/src/mitra_ai_foundation/common/enum/: task_model.py
mitra_ai_foundation/src/mitra_ai_foundation/common/models/: common_config_model.py  worker_config_model.py
mitra_ai_foundation/src/mitra_ai_foundation/worker/: __init__.py  config_helpers.py  extension.py  main.py
mitra_ai_foundation/src/mitra_ai_foundation/worker/core/: celery_app.py
mitra_ai_foundation/src/mitra_ai_foundation/worker/tasks/: tasks.py
