[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mitra-ai-foundation"
version = "0.3.7"
description = "Foundation components for MITRA applications"
authors = ["sai.sudhaneg@it-mitra.com"]
readme = "README.md"
packages = [{include = "mitra_ai_foundation", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
celery = "^5.3.4"
redis = "^5.0.1"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
mitra-worker = "mitra_ai_foundation.worker.cli:main"