[tool.poetry]
name = "mitra-log-api"
version = "0.1.0"
description = "FastAPI service for log analysis"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "api"}
]
repository = "https://github.com/yourusername/mitra-log-rca"
keywords = ["fastapi", "api", "log-analysis"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
mitra-ai-foundation = {path = "../../mitra_ai_foundation", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mitra-log-api = "api.main:main"